--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f78b7336350&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc58d9e5c50&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f78b791aa90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f78b791aa10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc58da27a90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc58da27e50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f78b7eaa310&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f78b7eaa510&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc58dfbd4d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc58dfbd6d0&gt;]</pre>
 </div>
 
 </div>
