--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f4cdc91e350&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f281ebfbb50&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f4cdc60f9d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f4cdc60fc10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f281f1aec90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f281f1aed10&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f4cdcbbd290&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f4cdcbbd4d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f281f76e2d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f281f76e4d0&gt;]</pre>
 </div>
 
 </div>
