--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f288d187650&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f6c79b85450&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f288d46f850&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f288d46fd90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f6c79f92990&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f6c79f8efd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f288da04350&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f288da04550&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f6c7a5a1310&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f6c7a5296d0&gt;]</pre>
 </div>
 
 </div>
