--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f972c37ed50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0d933ae450&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f972bd28fd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f972bd28d10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0d937ca990&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0d937ca2d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f972c2bd3d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f972c2bd5d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0d93d59250&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0d93d59450&gt;]</pre>
 </div>
 
 </div>
