--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd0cdd49510&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f945cd06490&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd0cda52d50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd0cda52fd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f945d112e50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f945d112f10&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd0cdfdf5d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd0cdfdf810&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f945d6af510&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f945d6af710&gt;]</pre>
 </div>
 
 </div>
