--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f6b9973b410&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8829251b90&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f6b990c4350&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f6b990c4110&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8828f5a3d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8828f5a1d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f6b996593d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f6b996595d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f88294eb190&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f88294eb390&gt;]</pre>
 </div>
 
 </div>
