--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8829251b90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f477a997d90&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8828f5a3d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8828f5a1d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f477a6cf2d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f477a6cf490&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f88294eb190&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f88294eb390&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f477ac7c410&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f477ac7c610&gt;]</pre>
 </div>
 
 </div>
