--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f4327882d90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff4d22a1250&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f4326983510&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f4326983210&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff4d22dfa90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff4d22dff90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f4326f3e190&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f4326f3e3d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff4d286e2d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff4d286e4d0&gt;]</pre>
 </div>
 
 </div>
