--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f6e9f597e90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3d5cc3cd90&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f6e9f9aed90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f6e9f9ae050&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f3d5d021a50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f3d5d021c50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f6e9ff44490&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f6e9ff44690&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f3d5cd69d10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f3d5d5e24d0&gt;]</pre>
 </div>
 
 </div>
