--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3d5cc3cd90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1726a73610&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3d5d021a50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3d5d021c50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1726d5c890&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1726d5c090&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3d5cd69d10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3d5d5e24d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f17272fb450&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f17272fb650&gt;]</pre>
 </div>
 
 </div>
