--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1726a73610&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ffb185cf910&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1726d5c890&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1726d5c090&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ffb182c1910&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ffb182c1190&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f17272fb450&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f17272fb650&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ffb18845690&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ffb18845890&gt;]</pre>
 </div>
 
 </div>
