--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f52b03eab10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd3fc8b0350&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f52b06c88d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f52b06c8cd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd3fcbbdf90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd3fcbbd090&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f52b0c65390&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f52b0c65590&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd3fd14c4d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd3fd14c6d0&gt;]</pre>
 </div>
 
 </div>
