--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0abb02f150&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1c892196d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f0abad013d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f0abad01c90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1c88bc2750&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1c88bc2350&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f0abb2a0250&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f0abb2a0490&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1c891583d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1c891585d0&gt;]</pre>
 </div>
 
 </div>
