--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd54a637610&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0a97c583d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd549f91b50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd549f91a10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0a978cc650&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0a978cc610&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd54a5512d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd54a5514d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0a97e7a350&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0a97e7a550&gt;]</pre>
 </div>
 
 </div>
