--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f35fa9f0690&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fdb72456290&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f35faced790&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f35fad24f10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fdb72761c90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fdb72761190&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f35fb2ed810&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f35fb28a510&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fdb72cf5590&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fdb72cf5790&gt;]</pre>
 </div>
 
 </div>
