--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fdb72456290&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f5c1a2f3b10&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fdb72761c90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fdb72761190&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f5c1940ccd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f5c1940ced0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fdb72cf5590&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fdb72cf5790&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f5c199a0650&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f5c199a0850&gt;]</pre>
 </div>
 
 </div>
