--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff668c38b50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8a3df97850&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff66904ddd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff66904da50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8a3e3a7990&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8a3e3a7610&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff6695e41d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff6695e43d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8a3e93d3d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8a3e93d5d0&gt;]</pre>
 </div>
 
 </div>
