--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8a3df97850&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f712120b250&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8a3e3a7990&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8a3e3a7610&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7120ef5490&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7120eea1d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8a3e93d3d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8a3e93d5d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f71214e1790&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f712147e2d0&gt;]</pre>
 </div>
 
 </div>
