--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f877e2a0410&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa4ae359c90&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f877e56fbd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f877e573310&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa4ae379bd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa4ae379dd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f877eb87590&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f877eb106d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa4ae923490&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa4ae923690&gt;]</pre>
 </div>
 
 </div>
