--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8b01debad0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7333923990&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8b02206350&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8b02206d90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7333d53b50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7333d53210&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8b02793590&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8b02793790&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f73342f2250&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f73342f2450&gt;]</pre>
 </div>
 
 </div>
