--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7efcae29b1d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc20308a650&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7efcae878090&gt;,
- &lt;matplotlib.lines.Line2D at 0x7efcae878e90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc203380b90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc203380d90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7efcaee0d410&gt;,
- &lt;matplotlib.lines.Line2D at 0x7efcaee0d610&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc203929450&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc203929650&gt;]</pre>
 </div>
 
 </div>
