--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc20308a650&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f501e84d290&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc203380b90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc203380d90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f501ee368d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f501ee36510&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc203929450&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc203929650&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f501f3c5350&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f501f3c5550&gt;]</pre>
 </div>
 
 </div>
