--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f21c7aa8750&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa56b4892d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f21c74232d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f21c7423610&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa56b7d8850&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa56b7d8a50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f21c79d2290&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f21c79d2490&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa56bd6e190&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa56bd6e390&gt;]</pre>
 </div>
 
 </div>
