--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f764c8e1350&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fdefc383310&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f764c5e3c90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f764c5e3450&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fdefb4c18d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fdefb4c1790&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f764cb7a2d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f764cb7a4d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fdefbaac6d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fdefba57610&gt;]</pre>
 </div>
 
 </div>
