--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f59d70a5b90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f420fbd1290&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f59d76fbb50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f59d73abd10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f420ffeb410&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f420ffeb1d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f59d79414d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f59d79416d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f4210581490&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f4210581690&gt;]</pre>
 </div>
 
 </div>
