--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc9a4d6b810&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f95f3fcfd90&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc9a5076b50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc9a50766d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f95f42dc290&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f95f42dc110&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc9a56095d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc9a56097d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f95f4868550&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f95f4868750&gt;]</pre>
 </div>
 
 </div>
