--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb780833f10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fbd2fac7890&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb7805160d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb780516610&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fbd2fdcfa50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fbd2fdcfc50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb780aa9690&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb780aa9890&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fbd30361350&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fbd303af150&gt;]</pre>
 </div>
 
 </div>
