--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff883cdad90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f4fbcfd3110&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff882dec590&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff882deca10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f4fbd300f10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f4fbd2e3950&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff88338a450&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff88338a650&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f4fbd86f310&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f4fbcfd3650&gt;]</pre>
 </div>
 
 </div>
