--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f6c69b1c650&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f843799e350&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f6c69b30ad0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f6c69b30cd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8437670b10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8437670d10&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f6c6a0da490&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f6c6a0da690&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8437c14450&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8437c14650&gt;]</pre>
 </div>
 
 </div>
