--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f6866ceacd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f373dbe7690&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f6866d603d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f6866d606d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f373d8d3a90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f373d8d3a10&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f68672ee490&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f68672ee690&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f373de63310&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f373de63510&gt;]</pre>
 </div>
 
 </div>
