--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f544ee1b490&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9818d33650&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f544f1069d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f544f106750&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f9819144cd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f9819144310&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f544f6b5290&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f544f6b5490&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f98196da510&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f98196da710&gt;]</pre>
 </div>
 
 </div>
