--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9818d33650&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1707357a10&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9819144cd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9819144310&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1706479ad0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1706479a50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f98196da510&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f98196da710&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1706a07350&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1706a07550&gt;]</pre>
 </div>
 
 </div>
