--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9eb6b5e410&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe064cbfc10&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9eb684ca10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9eb684cc50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe064d09990&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe064d09d90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9eb6df6350&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9eb6df6590&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe06529e490&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe06529e690&gt;]</pre>
 </div>
 
 </div>
