--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f010213acd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f675aea6b10&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f0102422690&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f0102422890&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f675abba550&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f675abba750&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f01029e2f50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f01029ef190&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f675b16ae50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f675b177090&gt;]</pre>
 </div>
 
 </div>
