--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f6eba75c510&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f46ee574c10&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f6eba47e210&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f6eba47e390&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f46eeb45dd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f46eeb414d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f6ebaa34b10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f6ebaa34c90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f46ef0dc650&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f46ef0e5d10&gt;]</pre>
 </div>
 
 </div>
