--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb3b1edc350&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f4802b38ed0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb3b2292210&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb3b2292410&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f48031fc090&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f4802ebd610&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb3b2837b10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb3b2837d10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f48034c3890&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f4803464e90&gt;]</pre>
 </div>
 
 </div>
