--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f671c44fad0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd0c305b8d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f671c40d350&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f671c40d550&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd0c29fe290&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd0c29fe490&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f671c9b4c10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f671c9b4e10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd0c2fa0b90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd0c2fa0d90&gt;]</pre>
 </div>
 
 </div>
