--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff0dda9bdd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3b03e01f90&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff0de06f3d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff0de06f5d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f3b0417bb10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f3b0419c410&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff0de611c50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff0de611e50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f3b044c7e10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f3b04740d10&gt;]</pre>
 </div>
 
 </div>
