--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f54b1b63b90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0dfe8aa450&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f54b2130450&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f54b2130650&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0dfe585190&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0dfe58e410&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f54b26d7d50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f54b26d7f50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0dfeb29890&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0dfeb30cd0&gt;]</pre>
 </div>
 
 </div>
