--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb32c31c850&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3297d0fb90&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb3280bb490&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb3280bb690&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f32982d3290&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f32982d3490&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb328660d50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb328660f50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f329887cbd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f329887cdd0&gt;]</pre>
 </div>
 
 </div>
