--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2a11d04a50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fab52e79910&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2a122d53d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2a122d55d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fab52ab6450&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fab52acf590&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2a12877cd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2a12877ed0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fab5306fd50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fab53076e90&gt;]</pre>
 </div>
 
 </div>
