--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f02a6f21190&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f6968801f10&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f02a6100450&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f02a6100650&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f6968500450&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f6968508590&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f02a66a8c90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f02a66a8e90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f6968aa4dd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f6968aabf10&gt;]</pre>
 </div>
 
 </div>
