--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa2e1d59cd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7faf284f5710&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa2e1d40a90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa2e1d40c90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7faf281dd9d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7faf281ddb90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa2e22e7390&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa2e22e7590&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7faf28781350&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7faf28781510&gt;]</pre>
 </div>
 
 </div>
