--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd01f1f7250&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1cf5f14d90&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd01eed7a90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd01eed7890&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1cf5c1aad0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1cf5c1acd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd01f47a410&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd01f47a210&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1cf61c04d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1cf61c06d0&gt;]</pre>
 </div>
 
 </div>
